trainer and model update

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -3,8 +3,23 @@
 
 
 # trainer
-1. 메트릭 시각화
-2. 로스 시각화(구현완료, 미확인)
-3. 모델 추가
-4. 결과 시각화
-5. 얼리 스탑핑 (구현하려면 코드 자체 수정필요)
+1. 메트릭 시각화, 다른 결과들 시각화
+8. 컨퓨전 메트릭
+9. 감정별 정확도
+
+
+7. custom model 만들기(미완)
+10. 앙상블 모델 만들기(custom)
+
+11. multi classfication 시각화 자료 어떤 것 쓰는지 조사
+
+
+# test
+1. pth load해서 샘플로 몇개 이미지 저장까지
+2. mediapipe 써서 크롭한 이미지 넘긴거 테스트로 돌리게 만들기
+
+# TODAY
+
+2. 감정별 정확도
+3. 컨퓨전 메트릭
+4. 속도 어떻게 쓰는지 알아보기, 메트릭 뭐쓸지 알아보기 (속도 대신 파라미터 개수로 나타냄 엑셀 시트 참고3)
