--- a/practice.ipynb
+++ b/practice.ipynb
@@ -121,6 +121,31 @@
     "\n",
     "print(sns.__version__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3]\n",
+    "list2 = [5, 6, 7]\n",
+    "\n",
+    "list3 = list1 + list2\n",
+    "\n",
+    "list3"
+   ]
   }
  ],
  "metadata": {
