--- a/practice.ipynb
+++ b/practice.ipynb
@@ -146,6 +146,95 @@
     "\n",
     "list3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotion = [0, 0,0,0]\n",
+    "accuracies = [0, 0,0,0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from espnet_model_zoo.downloader import ModelDownloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "v_tst_df = pd.read_csv(\"/home/KDT-admin/data_2000/labels/v_tst_df.csv\")\n",
+    "row_index = v_tst_df.index[v_tst_df[\"file_name\"] == \"image1362.jpg\"].tolist()[0]\n",
+    "v_tst_df.loc[row_index, \"file_name\"] = \"image13262.jpg\"\n",
+    "v_tst_df.to_csv(\"v_tst_df_updated.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2405</th>\n",
+       "      <td>2405</td>\n",
+       "      <td>2405.0</td>\n",
+       "      <td>image13262.jpg</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0.1  Unnamed: 0       file_name  class\n",
+       "2405          2405      2405.0  image13262.jpg      6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
