--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 무시\n",
     "img_path = '/home/KDT-admin/data/images/train/image1.jpg'# 이미지 읽기\n",
     "img = cv2.imread(img_path)# 이미지 확인\n",
     "plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))"
@@ -29,6 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 무시\n",
+    "\n",
     "detection_models = ['opencv', 'ssd', 'dlib', 'mtcnn', 'retinaface', 'mediapipe']\n",
     "# 얼굴 검출 및 정렬 진행\n",
     "\n",
@@ -36,8 +39,7 @@
     "face = DeepFace.detectFace(img_path=img_path,\n",
     "                        detector_backend='mediapipe')\n",
     "# 얼굴 영역 확인\n",
-    "plt.imshow(cv2.cvtColor(face, cv2.COLOR_BGR2RGB))\n",
-    "\n"
+    "plt.imshow(cv2.cvtColor(face, cv2.COLOR_BGR2RGB))"
    ]
   },
   {
@@ -66,6 +68,8 @@
     }
    ],
    "source": [
+    "# 무시\n",
+    "\n",
     "input = os.path.join(root_dir, 'train', train_img_list[0])\n",
     "print(input)"
    ]
