--- a/practice.ipynb
+++ b/practice.ipynb
@@ -182,7 +182,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['config.py', 'config copy.py']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "cfg_list = os.listdir('/home/KDT-admin/work/bonghoon/EST_wassup01_TEAM__4/config')\n",
+    "cfg_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cfg_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -206,35 +257,163 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>class</th>\n",
+       "      <th>training_mode</th>\n",
+       "      <th>model_num</th>\n",
+       "      <th>optim</th>\n",
+       "      <th>image(EA)</th>\n",
+       "      <th>freeze</th>\n",
+       "      <th>epochs</th>\n",
+       "      <th>batch</th>\n",
+       "      <th>lr</th>\n",
+       "      <th>weight_decay</th>\n",
+       "      <th>PNG_NAME</th>\n",
+       "      <th>final_epoch</th>\n",
+       "      <th>Tst_acc</th>\n",
+       "      <th>Max_acc</th>\n",
+       "      <th>Max_idx</th>\n",
+       "      <th>trn_loss</th>\n",
+       "      <th>tst_loss</th>\n",
+       "      <th>Min loss</th>\n",
+       "      <th>Min idx</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2405</th>\n",
-       "      <td>2405</td>\n",
-       "      <td>2405.0</td>\n",
-       "      <td>image13262.jpg</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0.1  Unnamed: 0       file_name  class\n",
-       "2405          2405      2405.0  image13262.jpg      6"
+       "Empty DataFrame\n",
+       "Columns: [training_mode, model_num, optim, image(EA), freeze, epochs, batch, lr, weight_decay, PNG_NAME, final_epoch, Tst_acc, Max_acc, Max_idx, trn_loss, tst_loss, Min loss, Min idx]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "columns = ['training_mode', 'model_num', 'optim', 'image(EA)', 'freeze', 'epochs', 'batch','lr','weight_decay','PNG_NAME', 'final_epoch', 'Tst_acc', 'Max_acc', 'Max_idx', 'trn_loss', 'tst_loss', 'Min loss', 'Min idx']\n",
+    "    \n",
+    "df = pd.DataFrame(columns=columns)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"<class 'torch.optim.adamw.AdamW'>\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "hh = str(torch.optim.AdamW)\n",
+    "\n",
+    "hh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'21011003'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "import pytz\n",
+    "now = datetime.now(pytz.timezone('Asia/Seoul')).strftime(\"%d%H%M%S\")\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1743437/3001220621.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'training_mode'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'image(EA)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'freeze'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'epochs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/bonghoon/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5985\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5986\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5987\u001b[0m         ):\n\u001b[1;32m   5988\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5989\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "columns = ['training_mode', 'image(EA)', 'freeze', 'epochs']\n",
+    "\n",
+    "new_data = {\n",
+    "    \"training_mode\": \"train\",\n",
+    "    \"image(EA)\": \"image13262.jpg\",\n",
+    "    \"freeze\": \"False\",\n",
+    "    \"epochs\": \"100\"\n",
+    "}\n",
+    "\n",
+    "df.append(new_data, ignore_index=True)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['config copy 10.py',\n",
+       " 'config copy 2.py',\n",
+       " 'config copy 3.py',\n",
+       " 'config copy 4.py',\n",
+       " 'config copy 5.py',\n",
+       " 'config copy 6.py',\n",
+       " 'config copy 7.py',\n",
+       " 'config copy 8.py',\n",
+       " 'config copy 9.py',\n",
+       " 'config copy.py',\n",
+       " 'config.py']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
