--- a/practice.ipynb
+++ b/practice.ipynb
@@ -182,6 +182,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('/home/KDT-admin/data/test_set1000/labels/js_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={'filename': 'file_name'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/home/KDT-admin/data/test_set1000/labels/js_all_updated.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['df58c033a04f7678edf7b2c375b2f57f1cfb2988296535b660de9f1468fffce9_여_30_상처_도심 환경_20210204132900-008-012.jpg',\n",
+       " 'df62cbb8881ee439441fe4d67a7ce2440f2349559ecbf5fbf0d700ae2b10ff60_남_20_슬픔_실외 자연환경_20210202083229-007-002.jpg',\n",
+       " 'df58c033a04f7678edf7b2c375b2f57f1cfb2988296535b660de9f1468fffce9_여_30_상처_상업시설&점포&시장_20210204132812-003-003.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_분노_숙박 및 거주공간_20201207133649-010-019.jpg',\n",
+       " 'df62cbb8881ee439441fe4d67a7ce2440f2349559ecbf5fbf0d700ae2b10ff60_남_20_중립_숙박 및 거주공간_20210202084805-010-003.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_분노_스포츠 관람 및 레저시설_20201207133535-004-011.jpg',\n",
+       " 'df58c033a04f7678edf7b2c375b2f57f1cfb2988296535b660de9f1468fffce9_여_30_상처_숙박 및 거주공간_20210204132920-010-009.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_기쁨_스포츠 관람 및 레저시설_20201207134508-004-003.jpg',\n",
+       " 'de6d23fe62808d9e7e3e324d94db6cffefba6994f935aa630c0826801d6f8f6d_여_20_불안_교통&이동수단(엘리베이터 포함)_20210122215618-002-002.jpg',\n",
+       " 'df62cbb8881ee439441fe4d67a7ce2440f2349559ecbf5fbf0d700ae2b10ff60_남_20_슬픔_상업시설&점포&시장_20210202083206-003-006.jpg',\n",
+       " 'dfd696a801c027606a934835ab480c8c10f36e9b3ca1073947150b40f62454e0_여_20_당황_도심 환경_20201207175827-008-007.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_분노_숙박 및 거주공간_20201207133649-010-013.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_기쁨_행사&사무공간_20201207134530-006-002.jpg',\n",
+       " 'dfd696a801c027606a934835ab480c8c10f36e9b3ca1073947150b40f62454e0_여_20_당황_도심 환경_20201207175827-008-006.jpg',\n",
+       " 'de6d23fe62808d9e7e3e324d94db6cffefba6994f935aa630c0826801d6f8f6d_여_20_불안_도심 환경_20210122215727-008-009.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_슬픔_교통&이동수단(엘리베이터 포함)_20201207133726-002-007.jpg',\n",
+       " 'dfd696a801c027606a934835ab480c8c10f36e9b3ca1073947150b40f62454e0_여_20_당황_교통&이동수단(엘리베이터 포함)_20201207175758-002-007.jpg',\n",
+       " 'dfc02b14400e9fcaec446cf4eeee7d7131a714d579c59ce60883423caec73cdf_여_20_기쁨_오락&공연시설_20201207134518-005-002.jpg',\n",
+       " 'de6d23fe62808d9e7e3e324d94db6cffefba6994f935aa630c0826801d6f8f6d_여_20_불안_공공시설&종교&의료시설_20210122215611-001-005.jpg',\n",
+       " 'df62cbb8881ee439441fe4d67a7ce2440f2349559ecbf5fbf0d700ae2b10ff60_남_20_중립_상업시설&점포&시장_20210202084724-003-006.jpg',\n",
+       " 'df62cbb8881ee439441fe4d67a7ce2440f2349559ecbf5fbf0d700ae2b10ff60_남_20_중립_도심 환경_20210202084753-008-006.jpg']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "li1 = os.listdir('/home/KDT-admin/data/sample_test_data')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_df= df[df['file_name'].isin(li1)]\n",
+    "sample_df.to_csv('/home/KDT-admin/data/sample_test_data/sample_df.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -414,11 +493,80 @@
     "import os\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute '__version__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39;49m__version__)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute '__version__'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'JP' IS AN INVALID TARGET LANGUAGE . EXAMPLE: LANGPAIR=EN|IT USING 2 LETTER ISO OR RFC3066 LIKE ZH-CN. ALMOST ALL LANGUAGES SUPPORTED BUT SOME MAY HAVE NO CONTENT\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from translate import Translator\n",
+    "\n",
+    "translator = Translator(from_lang=\"ko\", to_lang='jp')\n",
+    "translation = translator.translate(\"시계 토끼\")\n",
+    "translation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google_trans_new import google_translator\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gtts import gTTS\n",
+    "\n",
+    "text =\"hello my name is elice?\"\n",
+    "tts_ko = gTTS(text=text, lang='en')\n",
+    "tts_ko.save(\"gTTS.wav\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bonghoon",
+   "display_name": "bh",
    "language": "python",
    "name": "python3"
   },
